--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
+/* Google Fonts removido - usando fontes do sistema para melhor performance */
+/* Fontes do sistema são carregadas instantaneamente e não bloqueiam renderização */
 
 @tailwind base;
 @tailwind components;
